﻿# Changelog
Comprehensive changes can be found in Git change history:
	https://github.com/mkahvi/taskmaster/commits/master

## [0.13...]
### 2019-03-08
	Changed: Watchlist edit now tries to autofill executable name when available.
	Fixed: Watchlist executable validation now complains if the file has no extension.
	Added: Health monitor pressure warning now also informs of the pressure having been successfully alleviated.
	Added: Refresh option to process select dialog.
	Changed: Process select dialog now shows initial state more quickly instead of delaying until refresh is finished.
	Fixed: Power debug was broken if not enabled before launch.
### 2019-03-01
	Fixed: ObjectDisposedException on exit.
	Fixed: ArgumentOutOfRangeException on new rule creation
	Fixed: I/O priority was being affected with I/O priority disabled, if foreground monitor was also enabled.
		This used invalid value however, which should've caused it to be ignored regardless, however.
	Fixed: Path and File name validator in watchlist rule editor behaving badly if the field was empty.
	Added: Volume meter can now be toggled from topmost.
	Added: Watchlist columns can now be re-ordered.
### 2019-02-28
	Changed: Scan now uses single threaded loop instead of parallel loop. Parallel loop was causing strange responsiviness issues.
### 2019-02-27
	Changed: Color configuration. Should now have increased compatibility with different color schemes.
	Added: Option to enable&disable alternate row colors for more things.
	Changed: I/O priority is restored to normal for processes that are granted agency.
	Changed: Smart path ignores folder parts of certain length if they contain the executable name to avoid repeating parts.
	Internal: Cleanup code is now hopefully better.
	Changed: Exclusive mode now also stops search indexer.
### 2019-02-26
	Internal: UI code changes. Should consume less CPU now when the UI is open.
	Changed: Network error output to be more curt when the errors were only in the last sample.